# vigil

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.md  README.md  SECURITY.md  USER-INPUT-GATE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
assets/source/: asset-brief.md  palette.json  ui-kit-brief.md
docs/: PROJECT-TREE.txt  START-HERE.md  VALIDATION.md
docs/agent/: agentic-execution-workflow.md  asset-request-protocol.md  task-template.md
docs/architecture/: frontend-structure.md  persistence.md  system-architecture.md
docs/assets/: README.md  art-brief.md  asset-manifest.json  asset-registry.yaml
docs/backlog/: backlog.yaml
docs/development/: release-checklist.md  setup-windows.md
docs/domain/: disciplina-policy.md  domain-model.md  event-catalog.md  focus-session-state-machine.md
docs/product/: mvp-prd.md  personas-and-scenarios.md  product-principles.md  product-vision.md
scripts/: build_asset_manifest.py  build_project_tree.py  capture-ui-preview.mjs  check-version.mjs  generate_pixel_assets.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: companion.json  default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  repository.rs  session.rs  window.rs
(+115 files in other folders)
