[package]
name = "vigil-focus"
version = "0.0.2"
description = "Roman-inspired pixel-art desktop focus companion"
authors = ["Eray Ates"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vigil_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
